--- a/ui/src/components/Header/Header.scss
+++ b/ui/src/components/Header/Header.scss
@@ -4,7 +4,8 @@
     margin: 0;
     padding: 10px;
     color: white;
-  
+    justify-content: center;
+
     h2 {
       margin: 0;
       padding: 0;
