--- a/ui/src/components/ChatInput/ChatInput.scss
+++ b/ui/src/components/ChatInput/ChatInput.scss
@@ -1,8 +1,9 @@
 .ChatInput {
-    width: 95%;
+    width: 100%;
     display: block;
     margin: auto;
-  
+    padding: 15px;
+
     input {
       padding: 10px;
       margin: 0;
