--- a/ui/src/components/Upload/Upload.scss
+++ b/ui/src/components/Upload/Upload.scss
@@ -86,12 +86,17 @@ button {
   user-select: none;
   border: 0;
   border-radius: 2px;
-  background: rgba(103, 58, 183, 1);
+  // background: rgba(103, 58, 183, 1);
+  // color: #fff;
   color: #fff;
+  background-color: #0062cc;
+  border-color: #005cbf;
   outline: 0;
 }
 
 button:disabled {
-  background: rgb(189, 189, 189);
+  // background: rgb(189, 189, 189);
+  background-color: #007bff;
+  border-color: #007bff;
   cursor: default;
 }
