--- a/ui/src/components/Progress/Progress.scss
+++ b/ui/src/components/Progress/Progress.scss
@@ -1,12 +1,15 @@
 .ProgressBar {
   width: 100%;
   height: 8px;
-  background-color: rgb(183, 155, 229);
+  // background-color: rgb(183, 155, 229);
+  // background-color: #ffc107!important;
+  background-color: #dc3545!important;
   border-radius: 5px;
 }
 
 .Progress {
-  background-color: rgba(103, 58, 183, 1);
+  // background-color: rgba(103, 58, 183, 1);
+  background-color: #28a745!important;
   height: 100%;
   margin: 0;
   border-radius: 5px;
